--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
 <body>
 
-    <audio class="song" loop autoplay>
+    <!-- <audio class="song" loop autoplay>
         <source src="./music/hbd.mpeg">
         </source>
         Your browser isn't invited for super fun audio time.
-    </audio>
+    </audio> -->
 
     <div class="container">
         <div class="one">
