--- a/index.html
+++ b/index.html
@@ -26,23 +26,24 @@
     <div class="container">
         <div class="one">
             <h1 class="one">
-                Hi
-                <span id="name">Irene</span>
+                Merrryy
+                <span id="name">CHRISTMAS</span>
             </h1>
-            <p class="two" id="greetingText">I really like your name btw!</p>
+            <p class="two" id="greetingText">It's THAT time of year!</p>
         </div>
 
         <div class="three">
-            <p>It's your birthday!! :D</p>
+            <p>I had absolutely no idea what to do/get for you.</p>
         </div>
 
         <div class="four">
-            <div class="text-box">
-                <p class="hbd-chatbox">
+            <p> something something</p>
+            <!--<div class="text-box">
+                <<p class="hbd-chatbox">
                 Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
                 </p>
                 <p class="fake-btn">Send</p>
-            </div>
+            </div>-->
         </div>
 
         <div class="five">
