--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <audio class="song" loop autoplay>
-        <source src="./music/hbd.mpeg">
+        <source src="./music/bg_audio.mp4">
         </source>
         Your browser isn't invited for super fun audio time.
     </audio>
@@ -26,38 +26,39 @@
     <div class="container">
         <div class="one">
             <h1 class="one">
-                Merrryy
-                <span id="name">CHRISTMAS</span>
+                Hi
+                <span id="name">Yuri</span>
             </h1>
-            <p class="two" id="greetingText">It's THAT time of year!</p>
+            <p class="two" id="greetingText">Guess what day it is!</p>
         </div>
 
         <div class="three">
-            <p>I had absolutely no idea what to do/get for you.</p>
+            <p>It's your birthday!! :D</p>
         </div>
 
         <div class="four">
-            <p> something something</p>
-            <!--<div class="text-box">
-                <<p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+            <div class="text-box">
+                <p class="hbd-chatbox">
+                Happy birthday Rakuyama!! You are legally allowed to drink alcohol now! I can’t express how grateful I am to have you in my life. 
+                I feel incredibly lucky to be able to call you my friend..... *insert more text here*
+                With all my love, Susan G.
                 </p>
                 <p class="fake-btn">Send</p>
-            </div>-->
+            </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">That's what I was going to do.</p>
+            <p class="idea-1">That's what I was going to say.</p>
             <p class="idea-2">But then I stopped.</p>
             <p class="idea-3">
-                I realised, I wanted to do something<br>
+                I realized, I wanted to do something<br>
                 <strong>special</strong>
                 .
             </p>
             <p class="idea-4">Because,</p>
             <p class="idea-5">
                 You are Special
-                <span>:)</span>
+                <span>:3</span>
             </p>
             <p class="idea-6">
                 <span>S</span>
@@ -66,11 +67,12 @@
         </div>
 
         <div class="six">
-            <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="./img/yuri.png" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h5 id="wishText">May today be a joyful day! ;)</h5>
+                <h5 class="the-link" id="wishText"><a href="special.html">Gifts</a></h5>
             </div>
         </div>
 
@@ -145,7 +147,7 @@
         <div class="nine">
             <p>Okay, now come back and tell me if you liked it.</p>
             <p id="replay">Or click, if you want to watch it again.</p>
-            <p class="last-smile">:)</p>
+            <p class="last-smile">:3</p>
         </div>
     </div>
 
