--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <div class="container">
         <div class="one">
             <h1 class="one">
-                Hi
-                <span id="name">Yuri</span>
+                MERRY
+                <span id="name">CHRISTMAS</span>
             </h1>
-            <p class="two" id="greetingText">Guess what day it is!</p>
+            <p class="two" id="greetingText">It's THAT time of the year!!!</p>
         </div>
 
         <div class="three">
