--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- My Style -->
     <link rel="stylesheet" href="./style/main.css" />
 </head>
@@ -33,15 +34,15 @@
         </div>
 
         <div class="three">
-            <p>It's your birthday!! :D</p>
+            <p>
+                
+            </p>
         </div>
 
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday Rakuyama!! You are legally allowed to drink alcohol now! I can’t express how grateful I am to have you in my life. 
-                I feel incredibly lucky to be able to call you my friend..... *insert more text here*
-                With all my love, Susan G.
+                
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
