--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" type="image/png" href="https://images.alphacoders.com/118/118821.jpg" />
+    <link rel="shortcut icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/6235/6235085.png" />
     <title>メリークリスマス!</title>
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
