--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
     <div class="container">
         <div class="one">
-            <h1 class="one">
-                MERRY
-                <span id="name">CHRISTMAS</span>
+            <h1 style="color: #fff", class="one">
+                Merry
+                <span id="name">Christmas</span>
             </h1>
             <p class="two" id="greetingText">It's THAT time of the year!!!</p>
         </div>
