--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <span id="name">Christmas</span>
             </h1>
             <p style="color: #fff;" class="two" id="greetingText">
-                It's THAT time of the year!!!
+                Hope you are having a splendid day!
                 <img src="https://static-00.iconduck.com/assets.00/party-popper-emoji-512x504-93a04c8z.png" alt="Party Popper" style="width: 20px; height: 20px; vertical-align: middle;">
             </p>
         </div>
