--- a/index.html
+++ b/index.html
@@ -38,30 +38,30 @@
 
         <div class="three">
             <p>
-                
+                I asked you what I could get you
             </p>
         </div>
 
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                
+                    you dont need to do anything
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">That's what I was going to say.</p>
-            <p class="idea-2">But then I stopped.</p>
+            <p class="idea-1">ik you said not to get you anything</p>
+            <p class="idea-2">But you know me</p>
             <p class="idea-3">
-                I realized, I wanted to do something<br>
-                <strong>special</strong>
+                I really wanted to do <em>something</em><br>
+                <strong>ANYTHING</strong>
                 .
             </p>
-            <p class="idea-4">Because,</p>
+            <p class="idea-4">You are so cool,</p>
             <p class="idea-5">
-                You are Special
+                and i care for you a lot
                 <span>:3</span>
             </p>
             <p class="idea-6">
@@ -74,47 +74,47 @@
             <img src="./img/yuri.png" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
-                <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May today be a joyful day! ;)</h5>
-                <h5 class="the-link" id="wishText"><a href="special.html">Gifts</a></h5>
+                <h3 class="wish-hbd">Happy Holidays!</h3>
+                <h5 id="wishText">May you be blessed and happy for life <3 </h5>
+                <!-- <h5 class="the-link" id="wishText"><a href="special.html">Gifts</a></h5> -->
             </div>
         </div>
 
         <div class="seven">
             <div class="baloons">
-                <img src="img/ballon2.svg" alt="" />
-                <img src="img/ballon1.svg" alt="" />
-                <img src="img/ballon3.svg" alt="" />
-                <img src="img/ballon1.svg" alt="" />
-                <img src="img/ballon2.svg" alt="" />
-                <img src="img/ballon3.svg" alt="" />
-                <img src="img/ballon2.svg" alt="" />
-                <img src="img/ballon3.svg" alt="" />
-                <img src="img/ballon1.svg" alt="" />
-                <img src="img/ballon2.svg" alt="" />
-                <img src="img/ballon3.svg" alt="" />
-                <img src="img/ballon2.svg" alt="" />
-                <img src="img/ballon1.svg" alt="" />
-                <img src="img/ballon3.svg" alt="" />
-                <img src="img/ballon2.svg" alt="" />
-                <img src="img/ballon3.svg" alt="" />
-                <img src="img/ballon1.svg" alt="" />
-                <img src="img/ballon2.svg" alt="" />
-                <img src="img/ballon1.svg" alt="" />
-                <img src="img/ballon3.svg" alt="" />
-                <img src="img/ballon3.svg" alt="" />
-                <img src="img/ballon1.svg" alt="" />
-                <img src="img/ballon2.svg" alt="" />
-                <img src="img/ballon3.svg" alt="" />
-                <img src="img/ballon2.svg" alt="" />
-                <img src="img/ballon1.svg" alt="" />
-                <img src="img/ballon3.svg" alt="" />
-                <img src="img/ballon2.svg" alt="" />
-                <img src="img/ballon3.svg" alt="" />
-                <img src="img/ballon1.svg" alt="" />
-                <img src="img/ballon2.svg" alt="" />
-                <img src="img/ballon1.svg" alt="" />
-                <img src="img/ballon3.svg" alt="" />
+                <img src="img/ornament-2.png" alt="" />
+                <img src="img/ornament-1.png" alt="" />
+                <img src="img/ornament-3.png" alt="" />
+                <img src="img/ornament-1.png" alt="" />
+                <img src="img/ornament-2.png" alt="" />
+                <img src="img/ornament-3.png" alt="" />
+                <img src="img/ornament-2.png" alt="" />
+                <img src="img/ornament-3.png" alt="" />
+                <img src="img/ornament-1.png" alt="" />
+                <img src="img/ornament-2.png" alt="" />
+                <img src="img/ornament-3.png" alt="" />
+                <img src="img/ornament-2.png" alt="" />
+                <img src="img/ornament-1.png" alt="" />
+                <img src="img/ornament-3.png" alt="" />
+                <img src="img/ornament-2.png" alt="" />
+                <img src="img/ornament-3.png" alt="" />
+                <img src="img/ornament-1.png" alt="" />
+                <img src="img/ornament-2.png" alt="" />
+                <img src="img/ornament-1.png" alt="" />
+                <img src="img/ornament-3.png" alt="" />
+                <img src="img/ornament-3.png" alt="" />
+                <img src="img/ornament-1.png" alt="" />
+                <img src="img/ornament-2.png" alt="" />
+                <img src="img/ornament-3.png" alt="" />
+                <img src="img/ornament-2.png" alt="" />
+                <img src="img/ornament-1.png" alt="" />
+                <img src="img/ornament-3.png" alt="" />
+                <img src="img/ornament-2.png" alt="" />
+                <img src="img/ornament-3.png" alt="" />
+                <img src="img/ornament-1.png" alt="" />
+                <img src="img/ornament-2.png" alt="" />
+                <img src="img/ornament-1.png" alt="" />
+                <img src="img/ornament-3.png" alt="" />
             </div>
         </div>
 
