--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                    you dont need to do anything
+                    <img src="img/herpfp.png" alt="Profile Image" class="round-img"> you dont need to do anything
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">ik you said not to get you anything</p>
+            <p class="idea-1">yes ik you said not to get you anything</p>
             <p class="idea-2">But you know me</p>
             <p class="idea-3">
                 I really wanted to do <em>something</em><br>
