--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                    <img src="img/herpfp.png" alt="Profile Image" class="round-img"> you dont need to do anything
+                    <img src="img/herpfp.png" alt="Profile Image" class="round-img"> 
+                    you don’t need to do anything
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
