--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <div class="four">
             <div class="text-box">
-                <img src="img/herpfp.png" alt="Profile Image" class="round-img">
+                <img src="img/herpfp.png" class="round-img, hbd-chatbox">
                 <p class="hbd-chatbox">
                     you don’t need to do anything
                 </p>
