--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <div class="four">
             <div class="text-box">
                 <img src="img/herpfp.png" class="round-img, hbd-chatbox">
-                <p class="hbd-chatbox">
+                <span style="color: #fff", class="hbd-chatbox">
                     you don’t need to do anything
-                </p>
+                </span>
                 <p class="fake-btn">Send</p>
             </div>
         </div>
