--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
         <div class="four">
             <div class="text-box">
-                <img src="img/herpfp.png" class="round-img, hbd-chatbox">
-                <span style="color: #fff", class="hbd-chatbox">
+                <img src="herpfp.png" alt="Icon" class="round-img"> <!-- Image added here -->
+                <p style="color: #fff" class="hbd-chatbox"> <!-- Fixed comma in the style attribute -->
                     you don’t need to do anything
-                </span>
+                </p>
                 <p class="fake-btn">Send</p>
             </div>
         </div>
