--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
         <div class="four">
             <div class="text-box">
-                <img src="herpfp.png" alt="Icon" class="round-img"> <!-- Image added here -->
-                <p style="color: #fff" class="hbd-chatbox"> <!-- Fixed comma in the style attribute -->
+                <img src="./img/herpfp.png" alt="Icon" class="round-img"> <!-- Image added here -->
+                <p style="color: #fff" class="hbd-chatbox">
                     you don’t need to do anything
                 </p>
                 <p class="fake-btn">Send</p>
