--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
         <div class="four">
             <div class="text-box">
-                <img src="herpfp.png" alt="Icon" class="round-img"> <!-- Image added here -->
-                <p style="color: #fff" class="hbd-chatbox"> <!-- Fixed comma in the style attribute -->
+                <img src="./img/herpfp.png" alt="Icon" class="round-img"> <!-- Image added here -->
+                <p style="color: #fff" class="hbd-chatbox"> 
                     you don’t need to do anything
                 </p>
                 <p class="fake-btn">Send</p>
@@ -60,7 +60,7 @@
                 <strong>ANYTHING</strong>
                 .
             </p>
-            <p class="idea-4">You are so cool,</p>
+            <p class="idea-4">Because, you are so cool,</p>
             <p class="idea-5">
                 and i care for you a lot
                 <span>:3</span>
