--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <div class="six">
             <img src="./img/yuri.png" alt="profile" class="profile-picture" id="imagePath"/>
-            <img src="img/hat.svg" alt="hat" class="hat" />
+            <img src="img/hat.png" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Holidays!</h3>
                 <h5 id="wishText">May you be blessed and happy for life <3 </h5>
