--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <strong>ANYTHING</strong>
                 .
             </p>
-            <p class="idea-4">Because, you are so cool,</p>
+            <p class="idea-4">Because, you are so cool</p>
             <p class="idea-5">
                 and i care for you a lot
                 <span>:3</span>
@@ -119,7 +119,7 @@
             </div>
         </div>
 
-        <div class="eight">
+        <!-- <div class="eight">
             <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="20" cy="20" r="20" />
             </svg>
@@ -147,7 +147,7 @@
             <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="20" cy="20" r="20" />
             </svg>
-        </div>
+        </div> -->
 
         <div class="nine">
             <p>Okay, now come back and tell me if you liked it.</p>
