--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <img src="./img/yuri.png" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.png" alt="hat" width="100%" length="100%" class="hat" />
             <div class="wish">
-                <h3 class="wish-hbd">Happy Holidays!</h3>
-                <h5 id="wishText">May you be blessed and happy for life <3 </h5>
+                <h3 style="#fff", class="wish-hbd">Happy Holidays!</h3>
+                <h5 style="#fff", id="wishText">May you be blessed and happy for life <3 </h5>
                 <!-- <h5 class="the-link" id="wishText"><a href="special.html">Gifts</a></h5> -->
             </div>
         </div>
