--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </div>
 
         <div class="four">
+            <p> You said... </p>
             <div class="text-box">
                 <img src="./img/herpfp.png" alt="Icon" class="round-img"> <!-- Image added here -->
                 <p style="color: #fff" class="hbd-chatbox"> 
