--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </p>
             <p class="idea-4">Because, you are so cool</p>
             <p class="idea-5">
-                and i care for you a lot
+                and i care for <br> you a lot
                 <span>:3</span>
             </p>
             <p class="idea-6">
