--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 
         <div class="three">
             <p>
-                I asked you what I could get you
+                i asked you what i could get you
             </p>
         </div>
 
         <div class="four">
-            <p> You said... </p>
+            <p> you said... </p>
             <div class="text-box">
                 <img src="./img/herpfp.png" alt="Icon" class="round-img"> <!-- Image added here -->
                 <p style="color: #fff" class="hbd-chatbox"> 
@@ -55,13 +55,13 @@
 
         <div class="five">
             <p class="idea-1">yes ik you said not to get you anything</p>
-            <p class="idea-2">But you know me</p>
+            <p class="idea-2">but you know me</p>
             <p class="idea-3">
-                I really wanted to do <em>something</em><br>
+                i really wanted to do <em>something</em><br>
                 <strong>ANYTHING</strong>
                 .
             </p>
-            <p class="idea-4">Because, you are so cool</p>
+            <p class="idea-4">because, you are special</p>
             <p class="idea-5">
                 and i care for <br> you a lot
                 <span>:3</span>
