--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <div class="six">
             <img src="./img/herpfp.png" alt="profile" class="profile-picture" id="imagePath"/>
-            <img src="https://rubyscarf.github.io/foryou/img/hat.png" alt="hat" class="hat" />
+            <img src="https://rubyscarf.github.io/foryou/img/hat.png" alt="hat" width="41.7%" class="hat" />
             <div class="wish">
                 <h3 style="#fff", class="wish-hbd">Happy Holidays!</h3>
                 <h5 style="#fff", id="wishText">May you be blessed and happy for life <3 </h5>
