--- a/index.html
+++ b/index.html
@@ -74,10 +74,9 @@
 
         <div class="six">
             <img src="./img/herpfp.png" alt="profile" class="profile-picture" id="imagePath"/>
-            <img src="https://rubyscarf.github.io/foryou/img/hat.png" alt="hat" width="41.7%" class="hat" />
             <div class="wish">
-                <h3 style="#fff", class="wish-hbd">Happy Holidays!</h3>
-                <h5 style="#fff", id="wishText">May you be blessed and happy for life <3 </h5>
+                <h3 style="color: #fff", class="wish-hbd">Happy Holidays!</h3>
+                <h5 style="color: #fff", id="wishText">May you be blessed and happy for life <3 </h5>
                 <!-- <h5 class="the-link" id="wishText"><a href="special.html">Gifts</a></h5> -->
             </div>
         </div>
