--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="five">
-            <p class="idea-1">yes ik you said not to get you anything</p>
+            <p class="idea-1">yes ik didn't have to get you anything</p>
             <p class="idea-2">but you know me</p>
             <p class="idea-3">
                 i really wanted to do <em>something</em><br>
