--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="six">
             <img src="./img/herpfp.png" alt="profile" class="profile-picture" id="imagePath"/>
             <div class="wish">
-                <h3 style="color: #fff", class="wish-hbd">Happy Holidays!</h3>
+                <h3 style="color: #b01313", class="wish-hbd">Happy Holidays!</h3>
                 <h5 style="color: #fff", id="wishText">May you be blessed and happy for life <3 </h5>
                 <!-- <h5 class="the-link" id="wishText"><a href="special.html">Gifts</a></h5> -->
             </div>
