--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <div class="three">
             <p>
-                i asked you what i could get you
+                i asked you what i could do for you
             </p>
         </div>
 
