--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <p class="idea-1">yes ik i didn't have to do anything</p>
             <p class="idea-2">but you know me</p>
             <p class="idea-3">
-                i really wanted to do <em>something</em><br>
+                i really wanted to do <em style="color: #969696">something</em><br>
                 <strong>ANYTHING</strong>
                 .
             </p>
