--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 
         <div class="four">
             <p> you said... </p>
-            <div class="text-box">
+            <!-- <div class="text-box"> -->
                 <img src="./img/herpfp.png" alt="Icon" class="round-img"> <!-- Image added here -->
                 <p style="color: #fff" class="hbd-chatbox"> 
                     you don’t need to do anything
                 </p>
-                <p class="fake-btn">Send</p>
-            </div>
+                <!-- <p class="fake-btn">Send</p> -->
+            <!-- </div> -->
         </div>
 
         <div class="five">
