--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <div class="four">
             <p> you said... </p>
             <!-- <div class="text-box"> -->
-                <img src="./img/herpfp.png" alt="Icon" class="round-img"> <!-- Image added here -->
-                <p style="color: #fff" class="hbd-chatbox"> 
+            <!-- <img src="./img/herpfp.png" alt="Icon" class="round-img"> -->
+                <p> 
                     you don’t need to do anything
                 </p>
                 <!-- <p class="fake-btn">Send</p> -->
