--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -44,13 +45,13 @@
 
         <div class="four">
             <p> you said... </p>
-            <!-- <div class="text-box"> -->
-            <!-- <img src="./img/herpfp.png" alt="Icon" class="round-img"> -->
-                <p> 
+            <div class="text-box">
+                <img src="./img/herpfp.png" alt="Icon" class="round-img"> <!-- Image added here -->
+                <p style="color: #fff" class="hbd-chatbox"> 
                     you don’t need to do anything
                 </p>
-                <!-- <p class="fake-btn">Send</p> -->
-            <!-- </div> -->
+                <p class="fake-btn">Send</p>
+            </div>
         </div>
 
         <div class="five">
