--- a/index.html
+++ b/index.html
@@ -44,18 +44,12 @@
         </div>
 
         <div class="four">
-            <p> you said... </p>
-            <div class="text-box">
-                <img src="./img/herpfp.png" alt="Icon" class="round-img"> <!-- Image added here -->
-                <p style="color: #fff" class="hbd-chatbox"> 
-                    you don’t need to do anything
-                </p>
-                <p class="fake-btn">Send</p>
-            </div>
+            <p> you said i didnt have to get you anything</p>
+            
         </div>
 
         <div class="five">
-            <p class="idea-1">yes ik i didn't have to do anything</p>
+            <p class="idea-1">and yes ik that</p>
             <p class="idea-2">but you know me</p>
             <p class="idea-3">
                 i really wanted to do <em style="color: #969696, font-size: 2.5rem">something</em><br>
