--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <p style="color: #fff" class="hbd-chatbox"> 
                     you don’t need to do anything
                 </p>
-                <p class="fake-btn">Send</p>
+                <p style="visibility:hidden" class="fake-btn">Send</p>
             </div>
         </div>
 
