--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 
         <div class="three">
             <p>
-                i asked you what i could do for you
+                xmas is the season of love and giving
             </p>
         </div>
 
         <div class="four">
-            <p> you said... </p>
+            <p> i wanted to write smth </p>
             <div class="text-box">
-                <img src="./img/herpfp.png" alt="Icon" class="round-img"> <!-- Image added here -->
+                <img src="./img/yubi.png" alt="Icon" class="round-img"> <!-- Image added here -->
                 <p style="color: #fff" class="hbd-chatbox"> 
                     you don’t need to do anything
                 </p>
