--- a/index.html
+++ b/index.html
@@ -43,32 +43,33 @@
         </div>
 
         <div class="four">
-            <p> i wanted to write smth </p>
             <div class="text-box">
                 <img src="./img/yubi.png" alt="Icon" class="round-img"> <!-- Image added here -->
                 <p style="color: #fff" class="hbd-chatbox"> 
-                    you don’t need to do anything
+                    Hey beautiful, Merry Christmas!...
                 </p>
                 <p style="visibility:hidden" class="fake-btn">Send</p>
             </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">yes ik i didn't have to do anything</p>
+            <p class="idea-1">is what i was gonna send you</p>
             <p class="idea-2">but you know me</p>
             <p class="idea-3">
                 i really wanted to do <em style="color: #969696, font-size: 2.5rem">something</em><br>
-                <strong>ANYTHING</strong>
+                <strong>better</strong>
                 .
             </p>
-            <p class="idea-4">because, you are special</p>
+            <p class="idea-4">because, i love you</p>
             <p class="idea-5">
-                and i care for <br> you a lot
+                and i want you to <br> be happy forever
                 <span>:3</span>
             </p>
             <p class="idea-6">
-                <span>S</span>
-                <span>O</span>
+                <span>Y</span>
+                <span>U</span>
+                <span>R</span>
+                <span>I</span>
             </p>
         </div>
 
