--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             <div class="text-box">
                 <img src="./img/yubi.png" alt="Icon" class="round-img"> <!-- Image added here -->
                 <p style="color: #fff" class="hbd-chatbox"> 
-                    Hey beautiful, Merry Christmas!...
+                    Hey beautiful, Merry Christmas! I hope you have been resting, living life to the fullest, and just being happy. Seeing you happy makes me happy! 
+                    ...
                 </p>
                 <p style="visibility:hidden" class="fake-btn">Send</p>
             </div>
