--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
             </p>
             <p class="idea-4">because, i love you</p>
             <p class="idea-5">
-                and i want you to <br> be happy forever
+                and i want you <br> 
+                to be happy <br> 
+                forever
                 <span>:3</span>
             </p>
             <p class="idea-6">
