--- a/index.html
+++ b/index.html
@@ -63,12 +63,15 @@
             </p>
             <p class="idea-4">because, i love you</p>
             <p class="idea-5">
-                and i want you <br> 
-                to be happy <br> 
+                and i want you 
+                to be happy
                 forever
                 <span>:3</span>
             </p>
             <p class="idea-6">
+                <span>S</span>
+                <span>S</span>
+                <br>
                 <span>Y</span>
                 <span>U</span>
                 <span>R</span>
