--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="five">
             <p class="idea-1">is what i was gonna send you...</p>
-            <p class="idea-2">but you know me</p>
+            <p class="idea-2">but you know how i be sometimes</p>
             <p class="idea-3">
                 i really wanted to do <em style="color: #969696, font-size: 2.5rem">something</em><br>
                 <strong>better</strong>
