--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <div class="three">
             <p>
-                xmas is the season of love and giving
+                xmas is the season of giving
             </p>
         </div>
 
@@ -69,8 +69,8 @@
                 <span>:3</span>
             </p>
             <p class="idea-6">
-                <span>S</span>
-                <span>S</span>
+                <span>s</span>
+                <span>o</span>
                 <br>
                 <span>Y</span>
                 <span>U</span>
