--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
     <div class="container">
         <div class="one">
-            <h1 style="color: #fff", class="one">
+            <h1 style="color: #fff; background-color: rgba(0, 0, 0, 0.1)", class="one">
                 Merry
                 <span id="name">Christmas</span>
             </h1>
-            <p style="color: #fff;" class="two" id="greetingText">
+            <p style="color: #fff; background-color: rgba(0, 0, 0, 0.1)" class="two" id="greetingText">
                 Hope you are having a splendid day!
                 <img src="https://static-00.iconduck.com/assets.00/party-popper-emoji-512x504-93a04c8z.png" alt="Party Popper" style="width: 20px; height: 20px; vertical-align: middle;">
             </p>
@@ -45,7 +45,7 @@
         <div class="four">
             <div class="text-box">
                 <img src="./img/yubi.png" alt="Icon" class="round-img"> <!-- Image added here -->
-                <p style="color: #fff" class="hbd-chatbox"> 
+                <p style="color: #fff; background-color: rgba(0, 0, 0, 0.1)" class="hbd-chatbox"> 
                     Hey beautiful, Merry Christmas! I hope you have been resting, living life to the fullest, and just being happy. Seeing you happy makes me happy! 
                     ...
                 </p>
@@ -83,7 +83,7 @@
             <img src="./img/herpfp.png" alt="profile" class="profile-picture" id="imagePath"/>
             <div class="wish">
                 <h3 style="color: #07b516", class="wish-hbd">Happy Holidays!</h3>
-                <h5 style="color: #fff", id="wishText">May you be blessed and happy for life <3 </h5>
+                <h5 style="color: #fff; background-color: rgba(0, 0, 0, 0.1)", id="wishText">May you be blessed and happy for life <3 </h5>
                 <!-- <h5 class="the-link" id="wishText"><a href="special.html">Gifts</a></h5> -->
             </div>
         </div>
