--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <div class="three">
-            <p>
+            <p style="background-color: rgba(0, 0, 0, 0.1)">
                 xmas is the season of giving
             </p>
         </div>
