--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <div class="three">
-            <p>
+            <p style="color: #fff;">
                 xmas is the season of giving
             </p>
         </div>
